--- a/ch_ensemble_methods.tex
+++ b/ch_ensemble_methods.tex
@@ -1,5 +1,9 @@
 \chapter{Ensemble Methods and the Naive Bayes Classifier}\label{ch:ensembleMethods}
 
+This chapter will begin with introductions and formulations of the most common tree-based classifiers, to finish with the formulation of the Naive Bayes learner.
+For all of these models, in this chapter we will discuss the model's advantages and disadvantages as predictors, along with a comparison of the model's performance.
+This assessment will compare models benefits and drawbacks in a specific long-term migration experiment using processed CDR data.
+
 
 \section{Classifier: Decision Trees}\label{section:decision_trees}
 
