--- a/ch_descriptions_risk.tex
+++ b/ch_descriptions_risk.tex
@@ -9,45 +9,34 @@
 
 \chapter{Data Description and Risk Maps}\label{ch:descr-risk}
 
-This chapter will give a technical explanation on the raw Call Detail Records (CDR) used throughout this work.
-The preprocessing and manipulation of the data will be explained in depth, with all the details necessary to build the epidemic risk maps.
-All necessary vocabulary and definitions will be provided, along with the concepts behind the covariates that will be extracted from the CDRs at the user's level.
+This chapter will give a technical explanation of what raw Call Detail Records (CDR) are and how they will be used throughout this work.
+The preprocessing and manipulation of the data will be explained in depth, with all the details necessary to build the epidemic risk maps that are presented in this section.
+All necessary vocabulary and definitions will be introduced, along with the ideas used to build the user-level covariates from the CDRs.
 Finally, some descriptive facts on both datasets will be given, concerning data size, volume of transactions, feature correlations and a comparison of  TelCo user distribution with national population distributions.
 
 
 \section{Mobile Phone Data Sources}
 
-Our data source is anonymized traffic information from two mobile operators, in Argentina and in Mexico.
-Both companies service phone calls at the national level and to a number of customers than amounts to the order of millions.
-Both of these provide two different CDR datasets.
+Our data source is anonymized traffic information from two mobile operators, in Argentina and Mexico.
+Both companies service phone calls at the national level and to a number of customers that amounts to a user base that sizes in the order of millions.
+With these we are provided with two different CDR datasets.
 
-For our purposes, each record is represented as a tuple $\left < i, j, t, d, l \right >$,
-where user $i$ is the caller, user $j$ is the callee, $t$ is the date and time of the call,
-$d$ is the direction of the call (incoming or outgoing, with respect to the mobile operator client), and $l$ is the location of the tower that routed the communication.
+For our purposes, each record is represented as a tuple $\left < i, j, t, d, l \right >$, where user $i$ is the caller, user $j$ is the callee, $t$ is the date and time of the call, $d$ is the call direction (incoming or outgoing, with respect to the mobile operator client), and $l$ is the location of the tower that routed the communication.
 
-The dataset does not include personal information from the users, such as name or phone number.
-The users privacy is assured by differentiating users by their hashed ID, with encryption keys managed exclusively by the telephone company.
+The dataset does not include personal information from the users, such as name, phone number, home address, etc.
+The users privacy is assured by differentiating users by their salted and hashed ID, where encryption keys were managed exclusively by the telephone company.
 
-Data was preprocessed excluding users whose monthly cellphone use either did not surpass a minimal number of calls $\mu$ or exceeded a maximal number $M$.
-This ensures we leave out outlying users such as call-centers or dead phones.
-In both datasets, we used $\mu = 5$ and $M = 400$.
+All of the data was preprocessed excluding users whose monthly cellphone use either did not surpass a minimal number of calls $\mu$ or exceeded a maximal number $M$.
+This ensures we leave out outlying users such as call-centers or dead phones and forboth datasets, we used $\mu = 5$ and $M = 400$.
 
-We then aggregate the call records for a five
-month period into an edge list $(n_i, n_j, w_{i,j})$ where nodes $n_i$ and $n_j$
-represent users $i$ and $j$ respectively and $w_{i,j}$ is a boolean value
-indicating whether these two users have communicated at least once within the
-five month period.
-This edge list will represent our mobile graph
-$\calG = \left< \calN, \calE \right> $ where $\calN$ denotes the set of nodes (users)
-and $\calE$ the set of communication links.
-We note that only a subset $\calN_C$ nodes in $\calN$
-are clients of the mobile operator, the remaining nodes $\calN \setminus \calN_C$ are
-users that communicated with users in $ \calN_C $ but themselves are not clients of
-the mobile operator.
+We then aggregate the call records for a five month period into an edge list $(n_i, n_j, w_{i,j})$ where nodes $n_i$ and $n_j$
+represent users $i$ and $j$ respectively and $w_{i,j}$ is a boolean value indicating whether these two users have communicated at least once within the five month period.
+This edge list will represent our mobile graph 
+$\calG = \left< \calN, \calE \right> $ where $\calN$ denotes the set of nodes (users) and $\calE$ the set of communication links.
+We note that only a subset $\calN_C$ nodes in $\calN$ are clients of the mobile operator, the remaining nodes $\calN \setminus \calN_C$ are users that communicated with users in $ \calN_C $ but themselves are not clients of the mobile operator.
 
-Since geolocalization information is available only for users in $\calN_C$, in the analysis we considered the graph $\calG_C = \left< \calN_C, \calE_C \right>$ of communications between clients of the operator.
+Since geolocalization information is available only for users in $\calN_C$, in the analysis we considered the graph $\calG_C = \left< \calN_C, \calE_C \right>$ which results to communications only between clients of the operator.
 
-% \paragraph{Argentina.}
 \paragraph{Datasets Information.}
 
 The Argentinian dataset contains CDRs collected over a period of 5 consecutive months.
@@ -59,56 +48,50 @@ In total, data amounts to almost 10 billion calls.
 % \paragraph{Mexico.}
 
 The Mexican data source is an anonymized dataset from a national mobile phone operator.
-Data is available for every call made within a period of 24 consecutive months.
-The raw logs contain at least 11 and at most 47 million daily calls.
+Data is available for every call made within a period of 24 consecutive months and the raw logs contain at least 11 and at most 47 million daily calls.
 Each day, up to 8 million users accessed the telecommunication company's (\textit{TelCo}) network.
 Note that users from other companies are logged, as long as one of the users registering the call is a client of the operator.
-In practice, we only considered CDRs between users in $\calN_C$ since geolocalization was only possible for this group.
+Again, we only considered CDRs between users in $\calN_C$ since geolocalization was only possible for this group.
 
-Information logged for each call included the duration and timestamp of the call, the users participating in the call and the antenna id that transmitted the call to the \emph{TelCo} client.
-Adding all data elements, the project involved working with more than 1 terabyte of data.
+Information logged for each call included other aspects of the interaction. 
+We had data for the duration and timestamp of the call, the users participating in the call and the antenna id that transmitted the call to the \emph{TelCo} client.
+
+Adding all data elements, the project involved working with more than 1.5 terabytes of data.
 The data was compressed using \emph{gzip}\footnote{For more information on this file format, please refer to Wikipedia's article on this subject: \url{https://en.wikipedia.org/wiki/Gzip}} format.
-The call logs, in this data format, were parsed, processed, transformed and loaded to create the datasets which were structured as needed by this project.
+The call logs, in this data format, were parsed, processed, transformed and loaded to create the datasets which were bult as needed by this project.
 
-% the necessary datasets the output datasets used during this project.
-% and classified as demanded.
-
-
-% \subsection{Data Limitations}
 \paragraph{Data Limitations.}
 Although a lot of information is available in the CDR datasets, there may be limitations in their representations of the whole population.
 In each case, data is sourced from a single mobile phone operator, and no information is given on the distribution of its users, thus calls might in principle not represent correctly social interactions and movements between two given jurisdictions.
-Also, not all user movements will be captured by the log records.
-However, these limitations are offset by the huge datasets' sizes, from which we can safely assume that the amount of users observed in each set is sufficient to correlate real mobility or social links between different areas.
-
+Also important, we note that not all user movements will be captured by the log records.
+However, these limitations are offset by the huge datasets' sizes, from which we think we can safely assume that the amount of users observed in each set is sufficient to correlate real mobility or social links between different areas.
 
 \section{ Risk Maps Generation}\label{section:risk_maps}
 
-In this section we describe how the Chagas disease risk maps were built for the in Argentina and in Mexico and we give an overview of their uses.
+In this section we describe how the Chagas disease risk maps were built for the in Argentina and Mexico, and we give an overview of their uses.
 As an overview, the risk maps hypothesize on the possibility of locating specific communities of higher disease prevalence outside of the endemic regions.
-They are based on the assumption that the stronger communication tie there is from the community to the endemic region, the higher the risk chances.
-Earlier versions of this research were presented by \cite{sarraute2015descubriendo}
-at \emph{Simposio Internacional sobre Enfermedades Desatendidas},
-and\cite{deMonasterio2016analyzing} at \emph{International Conference on Advances in Social Networks Analysis and Mining}.
+They are based on the assumption that when we have stronger communication ties from one community to the endemic region, we will find a higher chance of disease risk.
+Earlier versions of this project were presented by \cite{sarraute2015descubriendo} at \emph{Simposio Internacional sobre Enfermedades Desatendidas}, and\cite{deMonasterio2016analyzing} at \emph{International Conference on Advances in Social Networks Analysis and Mining}.
+These were based on the results contained in this chapter.
 
-The generated maps display a geographical representation with the TelCo's antennas situated on the map.
+The generated heatmaps display a geographical representation with the TelCo's antennas situated on the map.
 And for each antenna, a circle is drawn which represents, graphically, the volume of usage of that antenna and the vulnerability of its users.
 We will expand on this last concept later by analyzing the importance of this variable in the detection of long-term migrations.
 
 \subsection{Home Detection}\label{subsection:home_detection}
 
-The first step in order to build the risk maps is to infer the antenna in which each user lives.
-The antenna's neighborhood will define his area of influence and with this, his risk condition associated with being inside or outside the endemic region.
+In order to build the risk maps, the first step is to infer the antenna in which each user lives.
+The antenna's neighborhood will define his home area of influence and with this, his risk condition associated with being inside or outside the endemic region.
 
-Having the granularity of the geolocalized data at the antenna level, we can match each user $u \in \calN_C$ with its \textit{home antenna} $H_u$.
+Having the geolocalized data granular at the antenna level, we can match each user $u \in \calN_C$ with its \textit{home antenna} $H_u$.
 To do so, we assume $H_u$ as the antenna in which user $u$ spends most of the time during weekday nights.
-This, according to our categorization of days of the week's types, corresponds to Monday through Thursday nights, from 8pm to 6am of the following day.
-Note that this home antenna analysis will not precisely locate users but will define their area of influence.
-This will enable us to detect long range migrations.
+This, according to our categorization of weekday's types, corresponds to Monday through Thursday nights, from 8pm to 6am of the following day.
+Note that this home antenna analysis will not precisely locate users yet it will define their area of influence.
+This will enable us later to detect long range migrations by looking at changes in these home antennas.
 
 This \textit{home} characterization is based on the assumption that on any given day, users will be located at home during night time.
 The implications of this assumption for CDRs are explored by\cite{sarraute2015socialevents} and by\cite{csaji2012exploring}.
-The authors explain that given the large user base, this assumption proves helpful when trying to predict migration patterns at large scale.
+There, the authors explain that given the large user base, this assumption proves helpful when trying to predict migration patterns at large scale.
 For our case we need not detect specific agent movements but are more interested in movement of large amount of people.
 
 Given a user's $H_u$, he will be considered endemic if his inferred home antenna is located in the endemic zone $E_Z$.
@@ -124,9 +107,9 @@ Given the set of inhabitants of the risk area, we want to find those with a high
 To do this, we get the list of calls for each user and then determine the set of their neighbors in the social graph $\calG_C$.
 For each resident of the endemic zone, we tag all his graph neighbors as potentially vulnerable.
 We also tag the calls to (from) a certain antenna from (to) residents of the endemic area $E_Z$ as \textit{vulnerable calls}.
-With our definition, a user with at least one call from (to) the endemic area is enough to tag this user as vulnerable.
+With our definition, a user with at least one call from (to) the endemic area is enough to qualify as vulnerable.
 
-The next step is to aggregate this data for every antenna.
+The next step is to aggregate this data for every antenna. 
 Given an antenna $a$, we will have:
 \begin{itemize}
 	\item The total number of residents $N_a$ (this is, the number of people for which that is their home antenna).
@@ -136,7 +119,6 @@ Given an antenna $a$, we will have:
 \end{itemize}
 
 These four numbers $\left< N_a, V_a, C_a, VC_a \right>$ are the properties we extracted for each antenna in the studied countries.
-
 
 \subsection{Heatmap Generation}
 With the collected antenna properties, we generated heatmaps to visualize the mentioned antenna indicators, overlapping these heatmaps with political maps of the region taken for study.
@@ -148,10 +130,6 @@ In them, a circle is generated for each cell, where:
 	\item the \textbf{color}, is related to the fraction ${V_a}/{N_a}$ of vulnerable users living there.
 \end{itemize}
 
-%
-%A circle is generated for each antenna, where
-%the \textbf{area} depends on the population living in the antenna $N_a$;
-%and the \textbf{color} is related to the fraction ${V_a}/{N_a}$ of vulnerable users living there.
 
 We used two filtering parameters to control which antennas are plotted.
 \begin{itemize}
@@ -159,13 +137,13 @@ We used two filtering parameters to control which antennas are plotted.
 	\item $m_v$: The antenna is plotted if its population is bigger than $m_v$.
 \end{itemize}
 
-When displaying the maps, these parameters were helpful to identify special small antennas which were covered under the circles of other antennas.
-Having more than four thousand antennas for each plot means that high volume of these would graphically overlap those small neighboring ones.
+When displaying the maps, these parameters were helpful to identify special small antenna's circles which were covered under the circles of larger volume antennas.
+Having more than four thousand antennas for each plot means that a high number of these would graphically overlap those small neighboring ones.
 This \textit{noise} is unhelpful to the detection of smaller, more vulnerable, antennas.
 
 These parameters were tuned differently when zooming into different regions.
 For example: an antenna whose vulnerable percentage would be considered low at the national level can be locally high when zooming in at a more local level.
-These filtering parameters helped us explore these cases with more detail and provided great insight to the Mundo Sano Foundation.
+The filtering parameters helped us explore these cases with more detail, and provided great insight to the Mundo Sano Foundation.
 The following section presents these maps.
 
 \section{Risk Maps Visualizations}\label{section:riskmaps}
@@ -213,18 +191,17 @@ where we can see a gradient from the regions closer to the endemic zone $E_Z$ to
 
 \subsection{Detection of Vulnerable Argentinean Communities}
 
-As a result of inspecting the maps in \cref{fig:mapa_argentina}, we decided to
-focus visualizations in areas whose results were unexpected to the epidemiological experts.
+As a result of inspecting the maps in \cref{fig:mapa_argentina}, we decided to focus visualizations in areas whose results were unexpected to the epidemiological experts.
 These areas included the provinces of Tierra del Fuego, Chubut, Santa Cruz and Buenos Aires, with special focus on the metropolitan area of Greater Buenos Aires whose heatmap is shown in \cref{fig:amba_map}.
 
 In some cases, antennas stood out for having a significantly higher link to the epidemic area than the adjacent ones.
-Our objective here was to enhance the visualization in areas outside of Gran Chaco looking for possible host communities of migrants from the ecoregion, inferred by the social links given by the CDRs.
-Our assumptions were that if, in average, there was a high percentage of vulnerable users in that non-epidemic antenna, this would mean that there's a high possibility of having more infected users in that community.
+Our objective here was to enhance the visualization in areas outside of Gran Chaco looking for possible host communities of migrants from the ecoregion, inferred by the social links shown in the CDRs.
+Our assumptions were that if, in average, there was a higher percentage of vulnerable users in that non-epidemic antenna, this would mean that there's a high possibility of having more infected users in that community.
 
 As a result of this visualization, high risk antennas were separately listed and manually located in political maps.
 This information was made available to the \textit{Mundo Sano} Foundation collaborators who used it as an aid for their campaign planning and as education for community health workers.
 
-\todo{preguntarle a Diego si hubo algun avance/resultado sobre esto.}
+%\todo{preguntarle a Diego si hubo algun avance/resultado sobre esto.}
 
 \begin{figure}[p]
 	\caption{Risk map for the metropolitan area of Buenos Aires, filtered with $\beta = 0.02$.}\label{fig:amba_map}
@@ -250,11 +227,8 @@ Some of these can be seen directly from the heatmap in \cref{fig:amba_map}, wher
 \subsection{Risk Maps for Mexico}
 
 With the data provided by the CDRs and the endemic region defined in \cref{endemic_zone_mexico}, heatmaps were generated for Mexico using the methods described in \cref{subsection:home_detection}.
-The first generated visualizations are depicted in \cref{fig:mapas_mexico},
-which includes a map of the country of Mexico, and a zoom-in on the South region of the country.
-We used $m_v = 80$ inhabitants per antenna, and a high filtering value $\beta = 0.50$, which
-means that in all the antennas shown in \cref{fig:mapas_mexico},
-more that 50\% of inhabitants have a social tie with the endemic region $E_Z$.
+The first generated visualizations are depicted in \cref{fig:mapas_mexico}, which includes a map of the country of Mexico, and a zoom-in on the South region of the country.
+We used $m_v = 80$ inhabitants per antenna, and a high filtering value $\beta = 0.50$, which means that in all the antennas shown in \cref{fig:mapas_mexico}, more that 50\% of inhabitants have a social tie with the endemic region $E_Z$.
 For space reasons, we don't provide here more specific visualizations and analysis of the regions of Mexico.
 
 \begin{figure}[p]
@@ -288,20 +262,17 @@ For space reasons, we don't provide here more specific visualizations and analys
 
 \section{Features from the Data}
 
-The quality of any machine learning task on CDRs relies heavily on the ability to characterize the users and their communication patterns, in ways that are as differentiating as possible for the task at hand.
-In general, the features constructed reflect calling and mobility patterns,
-segmented by different time periods during the week, and tagging whether the actions or subjects are `endemic'.
+The quality of any machine learning task on CDRs relies heavily on the ability to characterize the users and their communication patterns, in ways that are as relevant as possible to the task.
+In general, the features constructed reflect calling and mobility patterns, segmented by different time periods during the week, and tagging whether the actions or subjects are `endemic'.
 
-The goal of building a machine learning model is to evaluate which long-term migrations can be accurately predicted from the CDR data.
-Added to this, we would like to know what type of information extracted from the data has most predictive power to our problem variable.
-This result would tell us what data feature is informative in detecting migrations, which in turn, would test the assumption on which we build the risk maps in \cref{section:riskmaps}.
+Our goal in building a machine learning model is to evaluate and analyze if long-term migrations can be accurately predicted from the CDR data.
+Added to this, we would like to know what type of information extracted from the data has most predictive power to our problem's variable.
+This result would tell us which data features are informative in detecting migrations, which in turn, would test the assumption on which we build the risk maps in \cref{section:riskmaps}.
 
-The CDR logs available for Argentina span a period of 5 months,
-whereas the Mexican dataset includes 24 months, from January 2014 to December 2015, making it more suitable for this study.
+The CDR logs available for Argentina span a period of 5 months, whereas the Mexican dataset includes 24 months, from January 2014 to December 2015, making it more suitable for this study.
 
 To start, we divide the available data into two distinct periods:
-$T_0$, from January 2014 to July 2015, considered as the ``past'' in our experiment;
-and $T_1$, from August 2015 to December 2015, considered as the ``present''.
+$T_0$, from January 2014 to July 2015, considered as the ``past'' in our experiment; and $T_1$, from August 2015 to December 2015, considered as the ``present''.
 Our dataset will only run from August 2015 to December 2015 (period $T_1$), where all CDRs are processed to extract information by user and by link.
 This is done because we can't introduce data from $T_0$ for a model trying to predict this same information.
 
@@ -322,38 +293,31 @@ We tag all users having their home antenna in the epidemic region as \textit{EPI
 
 In our dataset user antennas are ordered with $0$ being the most used antenna and $9$ the least.
 We fill with null values for those users for which we don't have ten used antennas and discard users that have no calls on weeknights\footnote{This is because we wouldn't be able to detect $H1_u$.}.
-
-%Which 10 antennas does a user use most during each month of the training month interval?
-%How many calls have been made through each antenna?
-%Sort antennas with 0 being the most used and 10 the least used.Fill with nulls when less than 10 antennas were used.
-
 We also register the most used antennas considering only calls made during the \textit{weeknight} period, as defined in \cref{def:week-periods}.
 % that is from Monday to Friday excluding the working hours (from 8hs to 20hs)\label{WEEKNIGHT}.
 % Log counts as well.
 
-A user's home antenna is defined by the most used antenna.
-For our algorithms we considered two versions, the most used antenna in all of $T_0$., and the most used antenna during the \textit{week night} for these same months.
+As explained before, a user's home antenna is defined by the most used antenna during weeknights.
+For our algorithms we considered two versions of te home antenna: the most used antenna in all of $T_0$., and the most used antenna during the \textit{week night} for these same months.
 With this, users were tagged as `endemic' if their home antenna is in the endemic zone $E_Z$ and `exposed' if any of the ten antennas logged is in the risk area.
+Finally, we added the user's province by referring to his home antenna's pertenence.
 
 
 \subsection{Mobility Diameter}\label{section:def_mobility_diameter}
 
-The user's logged antennas define a convex hull in space and the radius of the hull is taken to be the user's mobility diameter.
+The user's logged antennas define a convex hull in space and the radius of this hull is taken to be the user's mobility diameter.
 This length is representative of the area of influence of that individual.
 We expect this feature to be correlated with long-term migrations.
 
-We register the mobility diameter of each user, as the diameter in kilometers of the convex hull defined by his top 10 used antennas.
+We proceeded to register the mobility diameter of each user, as the diameter in kilometers of the convex hull defined by his top 10 used antennas.
 Again, we generate two values for this attribute, considering (i) all antennas used and (ii) only those used during \textit{weeknights}.
-
-
 
 \subsection{Graph Data and Communications}\label{section:def_graph_data}
 
 We look at the social graph $\calG_C$ built from the CDRs, and the communications between nodes in $\calN_C$.
 
 For each edge $\left< n_i, n_j \right> \in \calE_C$, we dive into each of their interactions, segmenting call data with different criteria.
-For each month and each pair of users $\left< i,j \right>$, we gather the tuple $\left< time_{ij}, calls_{ij}, direction, period \right>$ where $time$ is the sum of all calls (in seconds), $calls$ is the number of calls exchanged, $direction$ is a boolean variable indicating whether the calls were incoming or outgoing (from user $i$'s point of view) and $period$ corresponds to a segmentation of the week into the periods \textit{weekday}, \textit{weeknight}, and \textit{weekend}.
-
+For each month and pair of users $\left< i,j \right>$, we gather the tuple $\left< time_{ij}, calls_{ij}, direction, period \right>$ where $time$ is the sum of all calls (in seconds), $calls$ is the number of calls exchanged, $direction$ is a boolean variable indicating whether the calls were incoming or outgoing (from user $i$'s point of view) and $period$ corresponds to a segmentation of the week into the periods \textit{weekday}, \textit{weeknight}, and \textit{weekend}.
 
 In this sense, two users $u_i, u_j \in \calN_C, u_i \neq uj$ are \textbf{neighbors} in the social graph if $time_{ij} > 0$.
 
@@ -365,7 +329,7 @@ In this sense, two users $u_i, u_j \in \calN_C, u_i \neq uj$ are \textbf{neighbo
 %if we find that user $j$ is epidemic.This may be translated as the edge is vulnerable if one of both users is epidemic.
 
 Since the samples in our dataset are users, we have to aggregate all these variables, by grouping interactions at the user level.
-The combination of different variables amounts to a total of 130 features per user.
+Combinations of all of these different variables amount to more than 150 features per user.
 
 To illustrate the point, we show a small example of how two calling features could look like.
 Groupings and filters are applied only on the user's calls:
@@ -383,7 +347,7 @@ Each attribute has its code name and a description of the codes used to construc
 		Feature name & Call/Time & Time Period & Direction of call & Endemicity & Month \\
 		% \midrule
 		\hline
-		Calls WeekEnd InVul08       & Count & Placed on WeekEnds & Incoming calls & Edges with endemic neighbors only & August\\
+		Calls WeekEnd InVul08    & Count & Placed on WeekEnds & Incoming calls & Edges with endemic neighbors only & August\\
 		% \midrule
 		\hline
 		Time WeekNight Out12 & Sum of duration in seconds & During weekdays and on out-of-office hours & Outgoing   & No endemic filtering   & December \\
@@ -396,17 +360,16 @@ Each attribute has its code name and a description of the codes used to construc
 %TimeWeekNight_OUT_12
 %CallsWeekEnd_IN_12
 
-Finally we aggregate all these variables at the user level, summing over all columns and grouping by user.
+Finally we aggregate all these variables up to a user's level, summing over all columns when grouping by users.
 In practice, this means grouping either by $j$ or $i$, and summing across all of the different components shown above.
 
 We also label each edge $\left< n_i, n_j \right> \in \calE_C$ if one or both users is endemic and count each user's amount of neighbors in the communication graph, as well as the endemic neighbors.
 This labeling defines user $i$ as \textit{vulnerable} whenever he has any edge with another user $j$ who lives in the endemic region $E_Z$.
 
-%Additionally, for each user, we extract the total
 
 \subsection{Antenna Distribution}\label{subsection:antenna_distribution}
 
-As explained, the training data belongs to period $T_1$, from August 2015 to December 2015;
+As explained before, the training data belongs to period $T_1$, from August 2015 to December 2015;
 whereas the ground truth that we use to validate the predictions belongs to $T_0$, from January 2014 to August 2015.
 Raw data logs contain between 11 million and 30 million calls per day and the volume of calls increases over the months, where most recent months have higher rates.
 
@@ -414,10 +377,9 @@ After preprocessing and cleaning the dataset, we obtained a dataset with 1.6 mil
 
 To create our model's input data, by means of relational database operations and algorithms that scrap the whole dataset, we transform raw CDRs into a dataset who's sample corresponds to a single user.
 
-
 To compare how this sampled population compares to country-wide distribution estimates,
-\cref{tab:distribution_by_state} shows the percentage of antennas, the percentage of the population (according to INEGI census 2014) and
-the percentage of TelCo users per state, for the top 10 Mexican states.
+\cref{tab:distribution_by_state} shows the percentage of antennas, the population (according to INEGI census 2014) and
+of TelCo users per state, for the top 10 Mexican states.
 % (Wikipedia's \url{https://en.wikipedia.org/wiki/Ranked_list_of_Mexican_states})
 
 
@@ -442,7 +404,7 @@ the percentage of TelCo users per state, for the top 10 Mexican states.
 	\end{tabular}
 \end{table}
 
-The table above describes the similarity between the population distribution of Mexico's population and the TelCo's users.
+The table above describes the similarity between the population distribution of Mexico versus the TelCo's users.
 This is shown to highlight possible sources of bias in the statistical model.
 
 Note that during this work we considered only postpaid users, i.e., users which have a monthly plan rate.
@@ -455,17 +417,14 @@ This filtering was done because prepaid users have a higher churn rate, thus mea
 
 \subsection{User Migrations}\label{subsection:user_migrations} % {Ground Truth.}
 
-We performed an analysis similar to the home antenna detection previously described in \cref{endemic_zone_mexico}, but considering the time period $T_0$ (from January 2014 to July 2015),
-in order to determine the home antenna of users during $T_0$.
+We performed an analysis similar to the home antenna detection previously described in \cref{endemic_zone_mexico}, but considering the time period $T_0$ (from January 2014 to July 2015), in order to determine the home antenna of users during $T_0$.
 
-The number of people which maintain their home antenna between $T_0$ and $T_1$ is 1,012,416;
-whereas 580,425 users had a change in their home antenna.
+The number of people which maintain their home antenna between $T_0$ and $T_1$ is 1,012,416; whereas 580,425 users had a change in their home antenna.
 In terms of endemic condition, we observed that 1,551,560 users maintained their endemic condition, whether it be positive or negative, between $T_0$ and $T_1$, whereas 41,281 had a change.
 
 
 % Confusion matrix
-\cref{tab:changes}
-shows the matrix of changes $C$, such that $C_{i, j}$ is the number of users that were in group $i$ during period $T_0$ (the past) and moved to group $j$ during the training period $T_1$.
+\cref{tab:changes} shows the matrix of changes $C$, such that $C_{i, j}$ is the number of users that were in group $i$ during period $T_0$ (the past) and moved to group $j$ during the training period $T_1$.
 As an example, lower left means was endemic, is now not endemic.
 
 \begin{table}[ht]
@@ -486,7 +445,6 @@ A similar count results in that 66.0\% of users have not changed their home ante
 This is not surprising given that we wouldn't expect a large number of people migrating in a time lapse of only two years.
 
 
-
 \subsection{Feature Correlations}
 \label{subsection:feature_correlations} % {Ground Truth.}
 
@@ -500,7 +458,7 @@ In these cases, it is important to know the value of this correlation to the pas
 In \cref{ch:ensembleMethods}, we will leverage this observation to improve our performance in predicting long-term migrations.
 
 \cref{tab:featureCorrelations} quantifies these relationships, where only features with an absolute correlation value higher than $0.25$ are shown.
-It is notable how the correlation is slightly increasing as we get closer to the split month i.e.\ the month chosen to separate $T_0$ from $T_1$.
+It is notable that the correlation is slightly increasing as we get closer to the split month i.e.\ the month chosen to separate $T_0$ from $T_1$.
 This behavior might be an indicator of seasonality in the data, where events from $T_1$more closer to $T_0$ carry more intrinsic value.
 Added to this, there is a very small indication that a user's calling volume in the month of December is more related to a user's past endemicity in the sense that it carries a higher correlation with his past endemicity.
 Again, this suggests data seasonality in the data, where December is a festive month by tradition in Latin America.
